# strict_int

./: CMakeLists.txt
src/strict_int/: CMakeLists.txt  strict_int.cpp  strict_int.hpp
test/: CMakeLists.txt  test.cpp
